--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -33,6 +33,7 @@
     "jest-editor-support": "*",
     "jquery": "^3.7.1",
     "jquery-sticky": "^1.0.4",
+    "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^20.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
