--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -35,6 +35,7 @@
     "jquery-sticky": "^1.0.4",
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^20.0.0",
+    "ngx-toastr": "^19.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
