--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -20,6 +20,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.1.5",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
@@ -37,6 +38,7 @@
     "jquery-sticky": "^1.0.4",
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^20.0.0",
+    "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
